--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "28642289-bd49-4e8a-a961-55f1db0fd80d",
    "metadata": {
     "tags": []
@@ -47,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9e7cca6b-3ed1-4dfb-a570-a9d40eb531e0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "DOMAIN_ID = \"d-givocgtibv1g\"\n",
-    "USER_PROFILE = \"default-1682182522641\""
+    "DOMAIN_ID = \"d-vc8i9dfmtd9h\"\n",
+    "USER_PROFILE = \"arnaucasbas\""
    ]
   },
   {
@@ -74,19 +74,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "099706c2-b9a8-471e-a21d-3a132febc184",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.25.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'arn:aws:iam::325223348818:role/service-role/AmazonSageMaker-ExecutionRole-20230312T160501'"
+       "'arn:aws:iam::386724814989:role/service-role/AmazonSageMaker-ExecutionRole-20230818T120332'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "00311496-3a75-4a04-880b-4301a21cb259",
    "metadata": {
     "tags": []
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c7b41df5-d6e7-4abe-a04d-8d390a3dea4f",
    "metadata": {
     "tags": []
@@ -270,9 +278,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arn:aws:sagemaker:us-east-1:325223348818:studio-lifecycle-config/packages\n",
+      "arn:aws:sagemaker:eu-north-1:386724814989:studio-lifecycle-config/packages\n",
       "{\n",
-      "    \"UserProfileArn\": \"arn:aws:sagemaker:us-east-1:325223348818:user-profile/d-givocgtibv1g/default-1682182522641\"\n",
+      "    \"UserProfileArn\": \"arn:aws:sagemaker:eu-north-1:386724814989:user-profile/d-vc8i9dfmtd9h/arnaucasbas\"\n",
       "}\n"
      ]
     }
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fb2699a8-1b33-454e-8b62-9b4a2df03bef",
    "metadata": {
     "tags": []
@@ -419,12 +427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fe4704df-af6a-4c38-8c74-bb690c9f1066",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arn:aws:sagemaker:eu-north-1:386724814989:studio-lifecycle-config/autoshutdown\n",
+      "{\n",
+      "    \"UserProfileArn\": \"arn:aws:sagemaker:eu-north-1:386724814989:user-profile/d-vc8i9dfmtd9h/arnaucasbas\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$DOMAIN_ID\" \"$USER_PROFILE\"\n",
     "\n",
@@ -484,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b99593fe-d51a-4593-9741-a43a44a2d174",
    "metadata": {
     "tags": []
@@ -507,7 +526,7 @@
     "from pathlib import Path\n",
     "\n",
     "\n",
-    "BUCKET = \"mlschool\"\n",
+    "BUCKET = \"mlschool-arnaucasbas\"\n",
     "S3_LOCATION = f\"s3://{BUCKET}/penguins\"\n",
     "DATA_FILEPATH = Path().resolve() / \"data.csv\"\n",
     "\n",
@@ -546,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b25f27ec-0ce9-4055-adde-270608a9c331",
    "metadata": {
     "tags": []
@@ -557,7 +576,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"Location\": \"/mlschool\"\n",
+      "    \"Location\": \"http://mlschool-arnaucasbas.s3.amazonaws.com/\"\n",
       "}\n"
      ]
     }
@@ -565,7 +584,7 @@
    "source": [
     "from constants import BUCKET\n",
     "\n",
-    "!aws s3api create-bucket --bucket $BUCKET"
+    "!aws s3api create-bucket --bucket $BUCKET --create-bucket-configuration LocationConstraint=\"eu-north-1\""
    ]
   },
   {
@@ -578,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "26015474-05db-49ce-8621-5f550703d68b",
    "metadata": {
     "tags": []
@@ -587,10 +606,10 @@
     {
      "data": {
       "text/plain": [
-       "'s3://mlschool/penguins/data.csv'"
+       "'s3://mlschool-arnaucasbas/penguins/data.csv'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "282181eb-fdb0-498b-b6ca-12096fe5f9ac",
    "metadata": {
     "tags": []
@@ -804,7 +823,7 @@
        "[344 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,9 +833,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9d56f5d-fdaf-486a-8577-052baff00e0a",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d841071-d5d3-4641-a47a-0eb94fbc9aa6",
+   "metadata": {},
+   "source": [
+    "1. Setting up permissions\n",
+    "2. Life cycle configuration: Auto-shutdown script to terminate cloud instances and avoid billing \n",
+    "3. Create an S3 bucket for storing the penguins dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85dde144-cc46-47b1-a6ed-09f6e8eafa05",
+   "id": "8d69815d-6c16-403c-a3d1-a51e5e3f4c41",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1398,10 +1435,11 @@
     "vcpuNum": 96
    }
   ],
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
+   "display_name": "Python 3 (Data Science 3.0)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/tensorflow-2.6-cpu-py38-ubuntu20.04-v1"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:eu-north-1:243637512696:image/sagemaker-data-science-310-v1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1413,7 +1451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.6"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
